# v2ray-flutter-plugin

./: .gitattributes  .gitignore  build_all_platforms.sh  build_android.sh  build_windows.sh  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.dart_tool/extension_discovery/: devtools.json
android/: build.gradle
android/libs/: libv2ray.aar
ios/: v2ray_flutter.podspec
ios/Classes/: V2rayFlutterPlugin.swift
ios/Frameworks/LibXray.xcframework/: Info.plist
ios/Frameworks/LibXray.xcframework/ios-arm64/LibXray.framework/: Info.plist  LibXray
ios/Frameworks/LibXray.xcframework/ios-arm64_x86_64-simulator/LibXray.framework/: Info.plist  LibXray
ios/Frameworks/Libv2ray.xcframework/: Info.plist
ios/Frameworks/Libv2ray.xcframework/ios-arm64/Libv2ray.framework/: Info.plist  Libv2ray
lib/: v2ray_flutter.dart
lib/native/: libv2ray.h  v2ray_wrapper.h
lib/src/: v2ray_config_helper.dart  v2ray_timer_utils.dart
libs/: libv2ray.h
libs/android/: libv2ray.h
libs/ios/Libv2ray.xcframework/: Info.plist
libs/ios/ios-arm64/Libv2ray.framework/: Info.plist  Libv2ray
libs/ios/ios-arm64_x86_64-simulator/Libv2ray.framework/: Info.plist  Libv2ray
libs/macos/: libv2ray.h
linux/libs/: libXray.h
macos/: v2ray_flutter.podspec
macos/Classes/: Libv2ray.objc.h  Libv2ray_macos.h  V2RayWrapper.h  V2RayWrapper.m  V2rayFlutterPlugin.swift  libv2ray.h
windows/: CMakeLists.txt  v2ray_flutter_plugin.cpp  v2ray_flutter_plugin.h
windows/include/v2ray_flutter/: v2ray_flutter_plugin.h  v2ray_flutter_plugin_c_api.h
(+22 files in other folders)
